    - Created pay.html, working payment system (account.html button TRANSACT)
    - Created a test user under ID 0001, can test payment with it
    - CentralBank has abstracted balance of Infinity, handled by a class in account.py (may be subject to severe bugs)

ALPHA v0.0.2.1
    - Removed redundant GET actions
    - Configurable (separated by pipe) navbar options for whether logged in or not
    - Navbar option '_' ignores the navbar item; use for when logged in or not and a NEW option should appear

ALPHA v0.0.2.2
    - Individually-recorded transaction history
    - Transactions now have recorded ids
    - Added a homemade encryption algorithm (and it's pretty damn unbreakable) if needed; encrypt.py
    - transaction_history.html now functioning; accessible from account.html

ALPHA v0.0.2.3
    - Created Google form for appeals, accessible through account.html
    - Account registry now accessible through account.html

#------------MAJOR UPDATE------------# (major changes to cookies, shutdown, and accounts)

ALPHA v0.0.3.0
    - Fixed some bugs in log dump
    - Refined server shutdown process
    - Actions no longer accessed by 'action-' prefix
    - Added logs to .gitignore
    - Client-id cookies are forced into some kind of existence now
    - A validator cookie has been added; it's a 512-bit string of random numbers, so you can only cookie-hack an account
        if you know the id AND validator (still not best case, but it's fine for most people)
    - Cookies will expire 2 weeks after their creation
    - Added HTTP code 303
    - Changed attachments of account.html to redirects using 303
    - Added account.html info of completed and active hunts

ALPHA v0.0.3.1
    - Created errors.cfg for configuring error codes and appropriate text
    - server.py has a get_error() which takes a code and returns text; use 'error' render kwarg, no explicit default needed
    - Created error CSS and added [[error]] to every page under [[navbar]]