@@ -147,5 +147,8 @@ ALPHA v0.0.3.0
 
 ALPHA v0.0.3.1
     - Created errors.cfg for configuring error codes and appropriate text
-    - server.py has a get_error() which takes a code and returns text; use 'error' render kwarg, no explicit default needed
+    - server.py has a throwError() which sends a page with the error and can use renderopts
     - Created error CSS and added [[error]] to every page under [[navbar]]
+    - Timestamps of transactions and last activity added, the former also to transaction_history.html
+    - Render options now have top-of-request-handler-set defaults
+    - 
